syntax = "proto3";

package client;

import "gorums.proto";

option go_package = "github.com/relab/hotstuff/client";

// Client is the client-facing API to HotStuff
service Client {
  // ExecCommand sends a command to all replicas and waits for valid signatures
  // from f+1 replicas
  rpc ExecCommand(Command) returns (Empty) {
    option (gorums.quorumcall) = true;
    option (gorums.ordered) = true;
    option (gorums.async) = true;
  }
}

message Command {
  uint32 ClientID = 1;
  uint64 SequenceNumber = 2;
  bytes Data = 3;
}

message Empty {}
